--- a/TGWSCAPP /TGWSCAPP/Supporting Files/Info.plist
+++ b/TGWSCAPP /TGWSCAPP/Supporting Files/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>是否允许此App使用相册用于上传图片？</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>是否允许此App为您添加照片用于上传图片？</string>
+	<key>NSCameraUsageDescription</key>
+	<string>是否允许此App使用摄像头权限用于上传头像？</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
