个人中心订单布局

--- a/TGWSCAPP /TGWSCAPP/Supporting Files/Info.plist
+++ b/TGWSCAPP /TGWSCAPP/Supporting Files/Info.plist
@@ -27,7 +27,7 @@
 			<string>weixin</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wx886c67d0eb472528</string>
+				<string>wx06afab08425bd34e</string>
 			</array>
 		</dict>
 		<dict>
