--- a/TGWSCAPP /TGWSCAPP/Supporting Files/Info.plist
+++ b/TGWSCAPP /TGWSCAPP/Supporting Files/Info.plist
@@ -107,7 +107,9 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>是否允许此App使用摄像头权限用于上传头像？</string>
+	<string>是否允许该App使用摄像头权限用于上传头像？</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>是否允许该App使用相册权限用于上传头像？</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>是否允许该App获取定位权限用以添加收货地址？</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
