--------------------微信登录复原分割线---------------

--- a/TGWSCAPP /TGWSCAPP/Supporting Files/Info.plist
+++ b/TGWSCAPP /TGWSCAPP/Supporting Files/Info.plist
@@ -75,7 +75,7 @@
 	<string>1.2.0.0</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
-		<string>XXJLApp</string>
+		<string>wechat</string>
 		<string>weixin</string>
 		<string>mqq</string>
 		<string>mqqapi</string>
