微信登陆黑屏bug解决

--- a/TGWSCAPP /Podfile
+++ b/TGWSCAPP /Podfile
@@ -2,29 +2,36 @@
 # platform :ios, '9.0'
 
 target 'TGWSCAPP' do
-  # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
-  # use_frameworks!
+    # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
+    # use_frameworks!
+    
+    #pod下载SDK支持版本设置
+    platform :ios, "10.0"
+    
+    pod "SDWebImage"
+    pod "MBProgressHUD"
+    pod "MJRefresh"
+    pod "WechatOpenSDK"
+    pod "JPush"
+    
+    #友盟基础依赖库
+    pod "UMCCommon"
+    pod "UMCSecurityPlugins"
+    #友盟统计SDK
+    pod "UMCAnalytics"
 
-  pod "SDWebImage"
-  pod "MBProgressHUD"
-  pod "MJRefresh"
-  pod "WechatOpenSDK"
-  pod "UMCCommon"
-  pod "UMCSecurityPlugins"
-  pod "UMCAnalytics“
-  pod "JPush"
-
-  
-  # Pods for TGWSCAPP
-
-  target 'TGWSCAPPTests' do
-    inherit! :search_paths
-    # Pods for testing
-  end
-
-  target 'TGWSCAPPUITests' do
-    inherit! :search_paths
-    # Pods for testing
-  end
-
+    
+    
+    # Pods for TGWSCAPP
+    
+    target 'TGWSCAPPTests' do
+        inherit! :search_paths
+        # Pods for testing
+    end
+    
+    target 'TGWSCAPPUITests' do
+        inherit! :search_paths
+        # Pods for testing
+    end
+    
 end
